# Sango.CMakeProjects

./: CMakeLists.txt  README.md
subprojects/Sango.ProgramLock/: CMakeLists.txt  StartExample.bash  main.cpp  test.cpp
